[gd_scene load_steps=9 format=2]

[ext_resource path="res://key_scenes/health_bar/HealthBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://art/mob_sprites/cute-ghost-transparent-7.png" type="Texture" id=2]
[ext_resource path="res://characters/enemies/Ghost.gd" type="Script" id=8]
[ext_resource path="res://characters/enemies/AI.gd" type="Script" id=9]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "side",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "up",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
height = 12.0

[sub_resource type="CircleShape2D" id=1]
radius = 95.0053

[sub_resource type="CircleShape2D" id=2]
radius = 132.85

[node name="Ghost" type="KinematicBody2D"]
collision_layer = 137
script = ExtResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 3 )
animation = "side"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="AI" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="PlayerDetectionZone" type="Area2D" parent="AI" groups=["enemies"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AI/PlayerDetectionZone"]
shape = SubResource( 1 )

[node name="PlayerUndetectZone" type="Area2D" parent="AI"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AI/PlayerUndetectZone"]
shape = SubResource( 2 )

[node name="GhostAttackCooldown" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="HealthBar" parent="." instance=ExtResource( 1 )]
margin_top = -21.0
rect_scale = Vector2( 0.7, 0.7 )

[node name="VisibilityTween" type="Tween" parent="."]

[connection signal="under_attack" from="." to="AI" method="_on_Mob_under_attack"]
[connection signal="attempt_to_shoot" from="AI" to="." method="_on_AI_attempt_to_shoot"]
[connection signal="chase_target" from="AI" to="." method="_on_AI_chase_target"]
[connection signal="area_entered" from="AI/PlayerDetectionZone" to="AI" method="_on_PlayerDetectionZone_area_entered"]
[connection signal="area_exited" from="AI/PlayerUndetectZone" to="AI" method="_on_PlayerUndetectZone_area_exited"]
